--- a/ex10/exercise.tex
+++ b/ex10/exercise.tex
@@ -273,6 +273,22 @@
 
   \end{solution}
 
+\item (demo) SOM demo.
+
+  \begin{solution}
+    \begin{figure}[h]
+      \centering
+      \includegraphics[width=0.8\textwidth]{som_demo.png}
+      \caption{SOM showing U.S. Congress voting patterns. The first
+        two boxes show clustering and distances while the remaining
+        ones show the component planes. Red means a yes vote while
+        blue means a no vote in the component planes (except the party
+        component where red is Republican and blue is
+        Democratic). {\scriptsize Source: Wikipedia. License:
+          CC-BY-SA-2.5.}}
+    \end{figure}
+  \end{solution}
+
 \end{enumerate}
 \end{document}             % End of document.
 
