--- a/ex03/exercise.tex
+++ b/ex03/exercise.tex
@@ -1,7 +1,7 @@
 
 \title{T-61.5130 Machine Learning and Neural Networks}
 \author{Karhunen, Luttinen}
-\date{Exercise 3, 9.11.2012}
+\date{Exercise 3}
 
 \input macros.tex
 
