--- a/ex04/exercise.tex
+++ b/ex04/exercise.tex
@@ -1,6 +1,6 @@
 \title{T-61.5130 Machine Learning and Neural Networks}
 \author{Karhunen, Luttinen}
-\date{Exercise 4, 15.11.2012}
+\date{Exercise 4}
 
 % \usepackage[english]{babel}
 % \usepackage[latin1]{inputenc}
