--- a/ex05/exercise.tex
+++ b/ex05/exercise.tex
@@ -1,7 +1,7 @@
 
 \title{T-61.5130 Machine Learning and Neural Networks}
 \author{Karhunen, Luttinen}
-\date{Exercise 5, 16.11.2012}
+\date{Exercise 5}
 
 \usepackage{url}
 
