--- a/ex09/exercise.tex
+++ b/ex09/exercise.tex
@@ -1,7 +1,7 @@
 
 \title{T-61.5130 Machine Learning and Neural Networks}
 \author{Karhunen, Luttinen}
-\date{Exercise 9, 30.11.2012}
+\date{Exercise 9}
 
 \usepackage{pdfpages}
 
