--- a/ex10/exercise.tex
+++ b/ex10/exercise.tex
@@ -1,7 +1,7 @@
 
 \title{T-61.5130 Machine Learning and Neural Networks}
 \author{Karhunen, Luttinen}
-\date{Exercise 10, 7.12.2012}
+\date{Exercise 10}
 
 \usepackage{cancel}
 
